WIP: enable signing with cosign
Signed-off-by: Jason Hall <jason@chainguard.dev>

--- a/action.yml
+++ b/action.yml
@@ -105,6 +105,10 @@ inputs:
     description: "GitHub Token used to authenticate against a repository for Git context"
     default: ${{ github.token }}
     required: false
+  sign:
+    description: "If true, sign the image with the GitHub Actions identity using Cosign."
+    default: 'false'
+    required: false
 
 outputs:
   imageid:
