--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
         uses: ./action
         with:
           file: ./test/Dockerfile
+          sign: true
 
   git-context:
     runs-on: ubuntu-latest
